Slecting the correct profile pic
Solved the problem, with the prodile pic looking too squished due to no cropping it correctly.

--- a/styles.css
+++ b/styles.css
@@ -70,11 +70,11 @@ header .profile-image {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  border: 3px solid white;
-  transition: all .5s;
+  border: 5px dotted white;
+  transition: all .6s;
 }
 header .profile-image:hover {
-  transform: scale(1.5) rotate(360deg);
+  transform: scale(1.2) rotate(360deg);
 }
 .tag {
   background-color: #efefef;
